2014-11-24  Per Bothner  <per@bothner.com>

	* standard/Include.java: Re-implement to use a settable search path.
	(process): Re-do search algorithm.
	(getIncludeSearchPath, getSearchPath): New methods.
	* standard/ImportFromLibrary.java (getImportSearchPath): Rewrite
	to use Include.getSearchPath.
	* standard/define_library.java: Update accordingly.

	* standard/ImportFromLibrary.java (SRFI97Map): Map srfi-26 to
	an actual classname, rather than BUILTIN.  Needed if environment
	is restricted, as in r7rs libraries.

	Resolve colon names even if quasiquote isn't in scope.
	* standard/export.java (scanForDefinitions): Call namespaceResolve
	as needed.
	* lang/Translator.java (rewrite_car_for_lookup): New method.
	(namespaceResolve, scanForm): Use rewrite_car_for_lookup.
	* lang/Quote.java (expand_pair): Likewise.
	* standard/export.java (export): Fix setting name.

2014-11-23  Per Bothner  <per@bothner.com>

	* standard/Scheme.java (initScheme): Remove '%define-syntax'.

2014-11-22  Per Bothner  <per@bothner.com>

	* standard/ImportFromLibrary.java (searchPath): Make public.

2014-11-20  Per Bothner  <per@bothner.com>

	* standard/location.java (rewriteApply): If creating a
	StaticFieldLocation, make sure to mangle the field name if needed.

2014-11-19  Per Bothner  <per@bothner.com>

	* standard/ImportFromLibrary.java (checkSrfi): Fix checking
	of optional name component.

	* standard/ImportFromLibrary.java (scanImportSet): If asking for a
	SRFI, we normally don't want to match a source file.

2014-11-17  Jamison Hope  <jrh@theptrgroup.com>

	* standard/expt.java (expt): Coerce arguments to Numeric and
	support Quaternions.
	* standard/require.java (featureMap): Add 'quaternions.

2014-11-16  Per Bothner  <per@bothner.com>

	* standard/require.java (importDefinitions): Handle context
	references lazily - i.e. only if needed.

	* standard/define_library.java (createModulePass): Update subModuleMap.
	Check for duplicate library name.requi