@@ -4,6 +4,7 @@ include $(top_srcdir)/Make-rules
 
 # NOTE if you update this list, also update build.xml.
 java_SCM_ALWAYS =\
+  prim_imports.scm \
   prim_syntax.scm \
   std_syntax.scm \
   reflection.scm \
