@@ -12,34 +12,8 @@
 (require kawa.lib.std_syntax)
 (require kawa.lib.vectors)
 (require kawa.lib.scheme.eval)
-(import (only (gnu kawa functions AddOp) + -))
-(import (rename (only (gnu kawa functions CallCC) callcc)
-                (callcc call-with-current-continuation)))
-(import (only (gnu kawa functions DivideOp) / modulo quotient remainder))
-(import (only (gnu kawa functions MultiplyOp) *))
-(import (rename (only (gnu kawa lispexpr LangObjType)
-                      listType stringType vectorType)
-                (listType list) (stringType string) (vectorType vector)))
-(import (rename (only (kawa lang Quote) plainQuote quasiQuote)
-                (plainQuote quote) (quasiQuote quasiquote)))
-(import (only (kawa standard append) append))
-(import (only (kawa standard begin) begin))
-(import (rename (only (kawa standard call_with_values) callWithValues)
-                (callWithValues call-with-values)))
-(import (only (kawa standard expt) expt))
+(require kawa.lib.prim_imports)
 (import (only (kawa standard load) load))
-(import (rename (only (kawa standard set_b) set) (set set!)))
-(import (rename (only (kawa standard let_syntax) let_syntax letrec_syntax)
-                (let_syntax let-syntax) (letrec_syntax letrec-syntax)))
-(import (rename (only (kawa standard Scheme)
-                      apply forEach isOdd isEven isEq isEqv isEqual
-                      numEqu numGrt numGEq numLss numLEq map not)
-                (forEach for-each)
-                (isOdd odd?)
-                (isEven even?)
-                (isEq eq?) (isEqv eqv?) (isEqual equal?)
-                (numEqu =) (numGrt >) (numGEq >=) (numLss <) (numLEq <=)))
-(import (only (kawa standard SchemeCompilation) lambda))
 
 (module-export
  * + - / < <= = > >=
